--- a/wechat_configuration.html
+++ b/wechat_configuration.html
@@ -4,10 +4,10 @@
     </p>
     <ol>
         <li>
-            Visit <a href="http://dev.wechat.com/" target="_blank">http://dev.wechat.com/</a>
+            Visit <a href="https://open.weixin.qq.com/" target="_blank">https://open.weixin.qq.com/</a>
         </li>
         <li>
-            Set Callback URL to: <span class="url">{{siteUrl}}_oauth/wechat</span>
+            Set Callback URL to: <span class="url">{{siteUrl}}</span>
         </li>
     </ol>
 </template>
